[tool.poetry]
name = "poetry-flask"
version = "0.1.0"
description = "Example flask app built with poetry"
authors = ["Shantanu <shantanu@render.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
